--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,9 @@
             <div class="home__elements">
                 <h2 >welcome to startup</h2>
                 <p >your favourite creative agency template</p>
-                <button type="button">get started</button>
+                <a href="#">
+                    <button type="button">get started</button>
+                </a>
             </div>
         </section>
 
@@ -195,11 +197,13 @@
                     <div class="slider__left-button-block">
                         <button type="button">
                             <i class="employer_slider_angel fa fa-angle-left" aria-hidden="true"></i>
+                            <p>slide left</p>
                         </button>
                     </div>
                     <div class="slider__right-button-block">
                         <button type="button">
                             <i class="employer_slider_angel fa fa-angle-right" aria-hidden="true"></i>
+                            <p>slide right</p>
                         </button>
                     </div>
                 </div>
@@ -234,9 +238,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="work-illustration">
@@ -244,9 +250,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="work-illustration">
@@ -254,9 +262,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
 
@@ -265,9 +275,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="work-illustration">
@@ -275,9 +287,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="work-illustration">
@@ -285,19 +299,24 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
+
                     <div class="work-illustration">
                         <img src="assets/4_works/rectangle_7.png" alt="picture">
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="work-illustration">
@@ -305,9 +324,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="work-illustration">
@@ -315,9 +336,11 @@
                         <div class="caption">
                             <h3>hair dresser</h3>
                             <p>branding</p>
-                            <button type="button">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
+                            <a href="#">
+                                <button type="button">
+                                    view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </button>
+                            </a>
                         </div>
                     </div>
             </div>
@@ -327,9 +350,12 @@
 
          <!-- Ruslan -->
          <section class="offer color-filter">
+            <h2 class="visually-hidden">Offer</h2>
             <p>Do you like <span class="offer__text--uppercase">our work</span> so far?</p>
             <p>Let`s talk about <span class="offer__text--uppercase">your project</span>!</p>
-            <button class="offer__button" type="button">get in touch</button>
+            <a href="#">
+                <button class="offer__button" type="button">get in touch</button>
+            </a>
         </section>
         <section class="blog" id="Blog">
             <div class="container">
@@ -360,9 +386,9 @@
                                     </a>
                                     <p>
                                         By 
-                                        <a class="article-header__link">Khalil</a>
+                                        <a class="article-header__link" href="#">Khalil</a>
                                             Uddin in 
-                                        <a class="article-header__link">Development</a>
+                                        <a class="article-header__link" href="#">Development</a>
                                     </p>
                                 </div>
                             </div>
@@ -398,9 +424,9 @@
                                     </a>
                                     <p class="article-subtitle">
                                         By 
-                                        <a class="article-header__link">Khalil</a>
+                                        <a class="article-header__link" href="#">Khalil</a>
                                             Uddin in 
-                                        <a class="article-header__link">Development</a>
+                                        <a class="article-header__link" href="#">Development</a>
                                     </p>
                                 </div>
                             </div>
@@ -422,6 +448,7 @@
             </div>
         </section>
         <section class="clients" id="Clients">
+            <h2 class="visually-hidden">Clients</h2>
             <div class="clients__container">
                 <ul class="clients__list">
                     <li class="client-item">
@@ -527,29 +554,42 @@
                             <i class="fa fa-mobile-phone" aria-hidden="true"></i>
                             <div class="contact-info-fragment__title">
                                 <h3>hotline (24x7)</h3>
-                                <p>+65 0052 300, +65 88251 210</p>
-                                <p>+88 01723 511 340</p>
+                                <p>
+                                    <a href="tel:+650052300">+65 0052 300</a>, 
+                                    <a href="tel:+6588251210">+65 88251 210</a>
+                                </p>
+                                <p>
+                                    <a href="tel:+8801723511340">+88 01723 511 340</a>
+                                </p>
                             </div>
                         </div>
                         <div class="contact-info-fragment">
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             <div class="contact-info-fragment__title">
                                 <h3>e-mail</h3>
-                                <p>shapedtheme@gamil.com</p>
-                                <p>khalilkode@gmail.com</p>
+                                <p>
+                                    <a href="mailto:shapedtheme@gamil.com">
+                                        shapedtheme@gamil.com
+                                    </a>
+                                </p>
+                                <p>
+                                    <a href="mailto:khalilkode@gmail.com">
+                                        khalilkode@gmail.com
+                                    </a>
+                                </p>
                             </div>
                         </div>
                     </div>
                     <form class="contact-form">
                         <div class="contact-form__flex-container">
-                            <input type="text" placeholder="your name">
-                            <input type="email" placeholder="your e-mail">
+                            <input type="text" placeholder="your name" name="name" autocomplete="name">
+                            <input type="email" placeholder="your e-mail" name="email" autocomplete="email">
                         </div>
                         <div class="contact-form__flex-container">
-                            <input type="text" placeholder="your subject">
-                            <input type="text" placeholder="company name">
+                            <input type="text" placeholder="your subject" name="subject">
+                            <input type="text" placeholder="company name" name="company" autocomplete="organization">
                         </div>
-                        <textarea class="contact-form__input message" placeholder="write your message"></textarea>
+                        <textarea class="contact-form__input message" placeholder="write your message" name="message"></textarea>
                         <div class="contact-form__footer">
                             <button class="contact-form__button" type="submit">send message</button>
                             <p>
@@ -563,40 +603,24 @@
         </section>
         <footer>
             <ul class="footer__social-net-icons-list">
-                <li>
+                <li class="social-net-icon-border">
                     <a href="#">
-                        <div class="social-net-icon-border">
-                            <div class="social-net-icon-wrapper">
-                                <img src="assets/8_footer/fa-twitter.png" alt="twitter">
-                            </div>
-                        </div>
+                        <img src="assets/8_footer/fa-twitter.png" alt="twitter">
                     </a>
                 </li>
-                <li>
+                <li class="social-net-icon-border">
                     <a href="#">
-                        <div class="social-net-icon-border">
-                            <div class="social-net-icon-wrapper">
-                                <img src="assets/8_footer/fa-twitter.png" alt="twitter">
-                            </div>
-                        </div>
+                        <img src="assets/8_footer/fa-twitter.png" alt="twitter">
                     </a>
                 </li>
-                <li>
+                <li class="social-net-icon-border">
                     <a href="#">
-                        <div class="social-net-icon-border">
-                            <div class="social-net-icon-wrapper">
-                                <img src="assets/8_footer/fa-twitter.png" alt="twitter">
-                            </div>
-                        </div>
+                        <img src="assets/8_footer/fa-twitter.png" alt="twitter">
                     </a>
                 </li>
-                <li>
+                <li class="social-net-icon-border">
                     <a href="#">
-                        <div class="social-net-icon-border">
-                            <div class="social-net-icon-wrapper">
-                                <img src="assets/8_footer/fa-twitter.png" alt="twitter">
-                            </div>
-                        </div>
+                        <img src="assets/8_footer/fa-twitter.png" alt="twitter">
                     </a>
                 </li>
             </ul>
